Change the name of the routing service

--- a/templates/configmaps/docspace-router.yaml
+++ b/templates/configmaps/docspace-router.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: docspace-proxy
+  name: docspace-router
   namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
