--- a/templates/configmaps/docspace.yaml
+++ b/templates/configmaps/docspace.yaml
@@ -21,7 +21,7 @@ data:
   ELK_HOST: {{ .Values.connections.elkHost }}
   ELK_PORT: {{ .Values.connections.elkPort | quote }}
   ELK_THREADS: {{ .Values.connections.elkThreads | quote }}
-  PROXY_HOST: {{ template "docspace.svc.proxy.name" . }}
+  ROUTER_HOST: {{ template "docspace.svc.router.name" . }}
   SOCKET_HOST: {{ .Values.connections.socketHost }}
   REDIS_HOST: {{ .Values.connections.redisHost }}
   REDIS_PORT: {{ .Values.connections.redisPort | quote }}
