Replace the version Chart with v1.2.0

--- a/values.yaml
+++ b/values.yaml
@@ -210,7 +210,7 @@ imagePullSecrets: ""
 # images.tag Global image tag for all services
 # Does not apply to the Document Server service, which takes the tag value from the `docs.image.tag`
 images:
-  tag: v1.1.1
+  tag: 1.1.2.2487
 # JSON Web Token parameters
 jwt:
   # jwt.enabled Specifies the enabling the JSON Web Token validation by the DocSpace
