Fix the description for known proxies

--- a/values.yaml
+++ b/values.yaml
@@ -145,10 +145,11 @@ connections:
   # connections.nginxSnvsubstTemplateSuffix A suffix of template files for rendering nginx configs in routing (Router) service
   nginxSnvsubstTemplateSuffix: ".template"
   # connections.appKnownProxies Defines the addresses of known proxies to accept forwarded headers from for DocSpace services
+  # These are the proxies that you are using in front of DocSpace services
   # Use to specify exact IP address matches
   # Example:
-  # appKnownProxies: ""
-  appKnownProxies: "10.244.0.5,10.245.1.6"
+  # appKnownProxies: "10.244.0.5,10.245.1.6"
+  appKnownProxies: ""
   # connections.appKnownNetworks Defines the address ranges of known networks to accept forwarded headers from for DocSpace services
   # Use to specify networks
   # Example:
