--- a/values.yaml
+++ b/values.yaml
@@ -144,17 +144,12 @@ connections:
   countWorkerConnections: "1024"
   # connections.nginxSnvsubstTemplateSuffix A suffix of template files for rendering nginx configs in routing (Router) service
   nginxSnvsubstTemplateSuffix: ".template"
-  # connections.appKnownProxies Defines the addresses of known proxies to accept forwarded headers from for DocSpace services
-  # These are the proxies that you are using in front of DocSpace services
-  # Use to specify exact IP address matches
-  # Example:
-  # appKnownProxies: "10.244.0.5,10.245.1.6"
-  appKnownProxies: ""
   # connections.appKnownNetworks Defines the address ranges of known networks to accept forwarded headers from for DocSpace services
-  # Use to specify networks
+  # In particular, the networks in which the proxies that you are using in front of DocSpace services are located should be indicated here
+  # Provide IP ranges using CIDR notation
   # Example:
   # appKnownNetworks: "10.244.0.0/16,10.245.0.0/16"
-  appKnownNetworks: ""
+  appKnownNetworks: "10.244.0.0/16"
   # connections.oauthRedirectURL Address of the oauth authorization server
   oauthRedirectURL: "https://service.example.com/oauth2.aspx"
 # namespaceOverride The name of the namespace in which DocSpace will be deployed
