--- a/values.yaml
+++ b/values.yaml
@@ -144,10 +144,12 @@ connections:
   countWorkerConnections: "1024"
   # connections.nginxSnvsubstTemplateSuffix A suffix of template files for rendering nginx configs in routing (Router) service
   nginxSnvsubstTemplateSuffix: ".template"
-  # connections.appKnownProxies Defines the known proxies for DocSpace services
-  appKnownProxies: ""
-  # connections.appKnownNetworks List of intermediate proxy addresses
-  appKnownNetworks: ""
+  # connections.appKnownNetworks Defines the address ranges of known networks to accept forwarded headers from for DocSpace services
+  # In particular, the networks in which the proxies that you are using in front of DocSpace services are located should be indicated here
+  # Provide IP ranges using CIDR notation
+  # Example:
+  # appKnownNetworks: "10.244.0.0/16,10.245.0.0/16"
+  appKnownNetworks: "10.244.0.0/16"
   # connections.oauthRedirectURL Address of the oauth authorization server
   oauthRedirectURL: "https://service.example.com/oauth2.aspx"
 # namespaceOverride The name of the namespace in which DocSpace will be deployed
