--- a/values.yaml
+++ b/values.yaml
@@ -144,6 +144,8 @@ connections:
   countWorkerConnections: "1024"
   # connections.nginxSnvsubstTemplateSuffix A suffix of template files for rendering nginx configs in routing (Router) service
   nginxSnvsubstTemplateSuffix: ".template"
+  # connections.wrongPortalNameURL
+  wrongPortalNameURL: ""
   # connections.appKnownNetworks Defines the address ranges of known networks to accept forwarded headers from for DocSpace services
   # In particular, the networks in which the proxies that you are using in front of DocSpace services are located should be indicated here
   # Provide IP ranges using CIDR notation
