--- a/templates/statefulset/backup-background-tasks.yaml
+++ b/templates/statefulset/backup-background-tasks.yaml
@@ -68,6 +68,9 @@ spec:
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/
+      {{- with .Values.initContainers.custom }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: backup-background-tasks
         image: {{ .Values.backupBackgroundTasks.image.repository }}:{{ default .Values.images.tag .Values.backupBackgroundTasks.image.tag }}
