--- a/templates/deployments/files.yaml
+++ b/templates/deployments/files.yaml
@@ -86,6 +86,9 @@ spec:
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/
+      {{- with .Values.initContainers.custom }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: files
         image: {{ .Values.files.image.repository }}:{{ default .Values.images.tag .Values.files.image.tag }}
