--- a/templates/statefulset/api.yaml
+++ b/templates/statefulset/api.yaml
@@ -68,6 +68,9 @@ spec:
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/
+      {{- with .Values.initContainers.custom }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: api
         image: {{ .Values.api.image.repository }}:{{ default .Values.images.tag .Values.api.image.tag }}
