--- a/templates/statefulset/login.yaml
+++ b/templates/statefulset/login.yaml
@@ -68,6 +68,9 @@ spec:
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/
+      {{- with .Values.initContainers.custom }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: login
         image: {{ .Values.login.image.repository }}:{{ default .Values.images.tag .Values.login.image.tag }}
