--- a/values.yaml
+++ b/values.yaml
@@ -244,6 +244,8 @@ log:
 debug:
   enabled: "false"
 # DocSpace Init Containers parameters
+# Containers that run before containers in a Pods
+# ref:https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
 initContainers:
   # Parameters of the Wait Storage initContainers
   waitStorage:
@@ -266,7 +268,7 @@ initContainers:
       limits:
         memory: "1Gi"
         cpu: "1000m"
-  # Parameters of the Wait Storage initContainers
+  # Parameters of the Init Storage initContainers
   initStorage:
     image:
       # initContainers.initStorage.image.repository app-init-storage initContainer image repository
@@ -287,6 +289,17 @@ initContainers:
       limits:
         memory: "2Gi"
         cpu: "1000m"
+  # initContainers.custom Custom initContainers parameters
+  # Does not apply to the following services: `Document Server`, `Router`, `Elasticsearch` and `Proxy Frontend`. The corresponding individual parameters are used for them
+  # Example:
+  # custom:
+  #   - name: additional-init-container
+  #     image: busybox:latest
+  #     command: ['chown', '-R', '104:107', '/app/onlyoffice/data']
+  #     volumeMounts:
+  #     - name: docspace-data
+  #       mountPath: /app/onlyoffice/data
+  custom: []
 # DocSpace persistence parameters
 persistence:
   # persistence.storageClass PVC Storage Class for DocSpace data volume
@@ -614,6 +627,15 @@ router:
   #         - zone1
   #         - zone2
   nodeAffinity: {}
+  # Router initContainers parameters
+  # router.initContainers Containers that run before Router container in a Pod
+  # ref:https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
+  # Example:
+  # initContainers:
+  #   - name: custom-init-container
+  #     image: busybox:latest
+  #     command: ['sh', '-c', 'sleep 180']
+  initContainers: []
   # Router container image parameters
   image:
     # router.image.repository Router container image repository
@@ -2392,6 +2414,15 @@ proxyFrontend:
   #         - name1
   #         - name2
   nodeAffinity: {}
+  # Proxy Frontend initContainers parameters
+  # proxyFrontend.initContainers Containers that run before Proxy Frontend container in a Pod
+  # ref:https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
+  # Example:
+  # initContainers:
+  #   - name: custom-init-container
+  #     image: busybox:latest
+  #     command: ['sh', '-c', 'sleep 180']
+  initContainers: []
   # Proxy Frontend container image parameters
   image:
     # proxyFrontend.image.repository Proxy Frontend container image repository
@@ -2558,6 +2589,15 @@ docs:
   #         - name1
   #         - name2
   nodeAffinity: {}
+  # Document Server initContainers parameters
+  # docs.initContainers Containers that run before Document Server container in a Pod
+  # ref:https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
+  # Example:
+  # initContainers:
+  #   - name: custom-init-container
+  #     image: busybox:latest
+  #     command: ['sh', '-c', 'sleep 180']
+  initContainers: []
   # docs container image parameters
   image:
     # docs.image.repository Document Server container image repository
@@ -2851,12 +2891,21 @@ elasticsearch:
   #         - name1
   #         - name2
   nodeAffinity: {}
+  # Elasticsearch additional initContainers parameters
+  # elasticsearch.initContainers Additional containers that run before Elasticsearch container in a Pod
+  # ref:https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
+  # Example:
+  # initContainers:
+  #   - name: additional-init-container
+  #     image: busybox:latest
+  #     command: ['sh', '-c', 'sleep 180']
+  initContainers: []
   # Elasticsearch container image parameters
   image:
     # elasticsearch.image.repository Elasticsearch container image repository
     repository: onlyoffice/elasticsearch
     # elasticsearch.image.tag Elasticsearch container image tag
-    tag: 7.10.0
+    tag: 7.16.3
     # elasticsearch.image.pullPolicy Elasticsearch container image pull policy
     pullPolicy: IfNotPresent
   # Configure a Security Context for Elasticsearch container in Pod
