Add redis password authentication in openresty

--- a/templates/deployments/router.yaml
+++ b/templates/deployments/router.yaml
@@ -102,6 +102,12 @@ spec:
         livenessProbe: {{- omit .Values.router.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
         resources: {{- toYaml .Values.router.resources | nindent 10 }}
+        env:
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "docspace.redis.secretName" . }}
+              key: {{ .Values.connections.redisSecretKeyName }}
         envFrom:
         - configMapRef:
             name: docspace
