--- a/templates/tests/test-docspace-pod.yaml
+++ b/templates/tests/test-docspace-pod.yaml
@@ -14,8 +14,8 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation
 spec:
   serviceAccountName: {{ include "docspace.serviceAccountName" . }}
-  {{- if .Values.podSecurityContext.enabled }}
-  securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 4 }}
+  {{- if .Values.tests.podSecurityContext.enabled }}
+  securityContext: {{- omit .Values.tests.podSecurityContext "enabled" | toYaml | nindent 4 }}
   {{- end }}
   {{- if .Values.nodeSelector }}
   nodeSelector: {{ toYaml .Values.nodeSelector | nindent 4 }}
@@ -32,11 +32,6 @@ spec:
     name: test-docspace
     resources: {{ toYaml .Values.tests.resources | nindent 6 }}
     env:
-    - name: MYSQL_ROOT_PASSWORD
-      valueFrom:
-        secretKeyRef:
-          name: {{ template "docspace.mysql.secretName" . }}
-          key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
     - name: MYSQL_PASSWORD
       valueFrom:
         secretKeyRef:
@@ -54,6 +49,46 @@ spec:
         secretKeyRef:
           name: {{ template "docspace.broker.secretName" . }}
           key: {{ .Values.connections.brokerSecretKeyName }}
+    - name: ROUTER_SERVICE
+      value: {{ template "docspace.svc.router.name" . }}:{{ .Values.router.service.port.external }}
+    - name: BACKUP_SERVICE
+      value: {{ .Values.connections.backupHost }}:{{ .Values.backup.containerPorts.app }}
+    - name: BACKUPBACKGROUNDTASKS_SERVICE
+      value: {{ .Values.connections.backupBackgroundTasksHost }}:{{ .Values.backupBackgroundTasks.containerPorts.app }}
+    - name: FILES_SERVICE
+      value: {{ .Values.connections.filesHost }}:{{ .Values.files.containerPorts.app }}
+    - name: FILESSERVICES_SERVICE
+      value: {{ .Values.connections.filesServicesHost }}:{{ .Values.filesServices.containerPorts.app }}
+    - name: PEOPLE_SERVICE
+      value: {{ .Values.connections.peopleServerHost }}:{{ .Values.peopleServer.containerPorts.app }}
+    - name: API_SERVICE
+      value: {{ .Values.connections.apiHost }}:{{ .Values.api.containerPorts.app }}
+    - name: STUDIO_SERVICE
+      value: {{ .Values.connections.studioHost }}:{{ .Values.studio.containerPorts.app }}
+    - name: STUDIONOTIFY_SERVICE
+      value: {{ .Values.connections.studioNotifyHost }}:{{ .Values.studioNotify.containerPorts.app }}
+    - name: NOTIFY_SERVICE
+      value: {{ .Values.connections.notifyHost }}:{{ .Values.notify.containerPorts.app }}
+    - name: SOCKET_SERVICE
+      value: {{ .Values.connections.socketHost }}:{{ .Values.socket.containerPorts.app }}
+    - name: SSO_SERVICE
+      value: {{ .Values.connections.ssoauthHost }}:{{ .Values.ssoauth.containerPorts.app }}
+    - name: DOCEDITOR_SERVICE
+      value: {{ .Values.connections.doceditorHost }}:{{ .Values.doceditor.containerPorts.doceditor }}
+    - name: CLEAREVENTS_SERVICE
+      value: {{ .Values.connections.clearEventsHost }}:{{ .Values.clearEvents.containerPorts.app }}
+    - name: LOGIN_SERVICE
+      value: {{ .Values.connections.loginHost }}:{{ .Values.login.containerPorts.login }}
+    - name: DOCS_SERVICE
+      value: {{ .Values.connections.documentServerHost }}:{{ .Values.docs.containerPorts.http }}
+    {{- if .Values.apiSystem.enabled }}
+    - name: APISYSTEM_SERVICE
+      value: {{ .Values.connections.apiSystemHost }}:{{ .Values.apiSystem.containerPorts.app }}
+    {{- end }}
+    {{- if .Values.proxyFrontend.enabled }}
+    - name: PROXYFRONTEND_SERVICE
+      value: {{ template "docspace.svc.proxyFrontend.name" . }}:{{ .Values.proxyFrontend.containerPorts.http }}
+    {{- end }}
     envFrom:
     - configMapRef:
         name: docspace
@@ -62,7 +97,6 @@ spec:
       mountPath: /scripts/test_docspace.py
       subPath: test_docspace.py
     command: ['python', '/scripts/test_docspace.py']
-    {{- end }}
   volumes:
   - name: test-docspace
     configMap:
