Add the ability to set up a different mysql user

--- a/templates/statefulset/api-system.yaml
+++ b/templates/statefulset/api-system.yaml
@@ -98,6 +98,8 @@ spec:
             secretKeyRef:
               name: {{ template "docspace.mysql.secretName" . }}
               key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_USER
+          value: {{ default .Values.connections.mysqlUser .Values.apiSystem.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
