--- a/templates/statefulset/socket.yaml
+++ b/templates/statefulset/socket.yaml
@@ -99,6 +99,8 @@ spec:
             secretKeyRef:
               name: {{ template "docspace.mysql.secretName" . }}
               key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_USER
+          value: {{ default .Values.connections.mysqlUser .Values.socket.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
