--- a/templates/deployments/people-server.yaml
+++ b/templates/deployments/people-server.yaml
@@ -115,6 +115,8 @@ spec:
             secretKeyRef:
               name: {{ template "docspace.mysql.secretName" . }}
               key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_USER
+          value: {{ default .Values.connections.mysqlUser .Values.peopleServer.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
