--- a/templates/statefulset/backup.yaml
+++ b/templates/statefulset/backup.yaml
@@ -97,6 +97,8 @@ spec:
             secretKeyRef:
               name: {{ template "docspace.mysql.secretName" . }}
               key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_USER
+          value: {{ default .Values.connections.mysqlUser .Values.backup.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
