--- a/templates/tests/test-docspace-pod.yaml
+++ b/templates/tests/test-docspace-pod.yaml
@@ -32,6 +32,8 @@ spec:
     name: test-docspace
     resources: {{ toYaml .Values.tests.resources | nindent 6 }}
     env:
+    - name: MYSQL_USER
+      value: {{ .Values.connections.mysqlUser }}
     - name: MYSQL_PASSWORD
       valueFrom:
         secretKeyRef:
