--- a/templates/configmaps/pre-upgrade.yaml
+++ b/templates/configmaps/pre-upgrade.yaml
@@ -14,15 +14,6 @@ metadata:
 data:
   update.sh: |-
     #!/bin/bash
-    mysql -h {{ .Values.connections.mysqlHost }} \
-      -u {{ .Values.connections.mysqlUser }} \
-      -p$MYSQL_PASSWORD \
-      -e "show databases;" > /dev/null
-    if [ $? -ne 0 ]; then
-      echo -e "\e[0;31m DB is not available \e[0m"
-      exit 1
-    fi
     rm -rf /var/www/products/ASC.Files/server/*
     rm -rf /var/www/products/ASC.People/server/*
-    # mysql -h mysql -u root -p$MYSQL_PASSWORD onlyoffice < /sql/changedb.sql
-    echo work done
+    echo Work done
