--- a/templates/jobs/pre-upgrade.yaml
+++ b/templates/jobs/pre-upgrade.yaml
@@ -42,17 +42,32 @@ spec:
       - name: {{ .Values.imagePullSecrets }}
       {{- end }}
       initContainers:
+      - name: check-db
+        image: {{ .Values.initContainers.checkDB.image.repository }}:{{ .Values.initContainers.checkDB.image.tag }}
+        imagePullPolicy: {{ .Values.initContainers.checkDB.image.pullPolicy }}
+        resources: {{- toYaml .Values.initContainers.checkDB.resources | nindent 10 }}
+        env:
+        - name: MYSQL_USER
+          value: {{ .Values.connections.mysqlUser }}
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "docspace.mysql.secretName" . }}
+              key: {{ .Values.connections.mysqlSecretKeyPassword }}
+        volumeMounts:
+        - name: check-db
+          mountPath: /scripts/checkdb.sh
+          subPath: checkdb.sh
+        command: ["/bin/sh", "-c"]
+        args: ["/scripts/checkdb.sh"]
       {{- if .Values.upgrade.job.initContainers.migrationRunner.enabled }}
       - name: migration-runner
         image: {{ .Values.upgrade.job.initContainers.migrationRunner.image.repository }}:{{ default .Values.images.tag .Values.upgrade.job.initContainers.migrationRunner.image.tag }}
         imagePullPolicy: {{ .Values.upgrade.job.initContainers.migrationRunner.image.pullPolicy }}
         resources: {{- toYaml .Values.install.job.initContainers.migrationRunner.resources | nindent 10 }}
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "docspace.mysql.secretName" . }}
-              key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_USER
+          value: {{ .Values.connections.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -69,11 +84,8 @@ spec:
         imagePullPolicy: {{ .Values.upgrade.job.initContainers.clearStorage.image.pullPolicy }}
         resources: {{- toYaml .Values.upgrade.job.initContainers.clearStorage.resources | nindent 10 }}
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "docspace.mysql.secretName" . }}
-              key: {{ .Values.connections.mysqlSecretKeyRootPassword }}
+        - name: MYSQL_USER
+          value: {{ .Values.connections.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -87,9 +99,6 @@ spec:
         - name: update-scripts
           mountPath: /sql/update.sh
           subPath: update.sh
-        # - name: change-db-scripts
-        #   mountPath: /sql/changedb.sql
-        #   subPath: changedb.sql
         command: ["/bin/sh", "-c"]
         args: ["/sql/update.sh"]
       containers:
@@ -109,12 +118,13 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+      - name: check-db
+        configMap:
+          name: check-db
+          defaultMode: 0755
       - name: update-scripts
         configMap:
           name: pre-upgrade
           defaultMode: 0755
-      # - name: change-db-scripts
-      #   configMap:
-      #     name: change-db-scripts
       restartPolicy: Never
 {{- end }}
